# rules_proto_zig

./: BUILD.bazel  MODULE.bazel  defs.bzl
examples/proto/: BUILD.bazel  person.proto  place.proto
src/bzl/repo/: extensions.bzl  zig_protobuf.bzl
src/bzl/zig/proto/: BUILD.bazel  zig_proto_library.bzl
